--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "crimeapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
-    "@react-google-maps/api": "^2.11.8",
+    "@ant-design/charts": "^1.3.6",
+    "@jiaminghi/data-view-react": "^1.2.5",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "google-map-react": "^2.1.10",
+    "antd": "^3.6.6",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.1.0",
+    "react-load-script": "^0.0.6",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.1",
